--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,9 @@ dependencies:
   flutter_local_notifications: ^6.0.0
   flutter_native_timezone: ^2.0.0
 
+  # color picker
+  flutter_colorpicker: ^0.4.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
