--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,15 +62,26 @@ dependencies:
 
   # handle dates
   intl: ^0.17.0
+
+  # Pick file storage
   file_picker: ^3.0.3
   firebase_storage: ^8.1.3
+
+  # Dashboard pet's text bubble
   animated_text_kit: ^4.2.1
+
+  # Todo completeness
   percent_indicator: ^3.0.1
+
+  # Local reminder
   flutter_local_notifications: ^6.0.0
   flutter_native_timezone: ^2.0.0
 
-  # color picker
+  # Color picker
   flutter_colorpicker: ^0.4.0
+
+  # Dashboard charts
+  syncfusion_flutter_charts: ^19.2.47+1
 
 dev_dependencies:
   flutter_test:
